kube-derive/tests/ui/union_fails.stderr
error: Unions can not #[derive(CustomResource)]
 --> tests/ui/union_fails.rs:8:7
  |
8 | union FooSpec {
  |       ^^^^^^^

error: Serde does not support derive for unions
  --> tests/ui/union_fails.rs:8:1
   |
 8 | / union FooSpec {
 9 | |     int: u32,
10 | | }
   | |_^
